--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/router": "^8.0.0",
     "angular-common": "^0.1.0",
     "core-js": "2",
+    "ngx-logger": "^4.1.9",
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1"
   },
